--- a/homepage.html
+++ b/homepage.html
@@ -18,12 +18,12 @@
         </header>
         <nav>
             <a href="homepage.html"> Home </a>
-            <a href=""> Volunteer </a>
+            <a href="volunteer.html"> Volunteer </a>
             <a href=""> Stats </a>
-            <a href=""> Profile </a>
-            <a href=""> Feedback </a>
-            <a href=""> Sitemap </a>
-            <a href=""> Team </a>
+            <a href="user_profile.html"> Profile </a>
+            <a href="feedback.html"> Feedback </a>
+            <a href="sitemap.html"> Sitemap </a>
+            <a href="team.html"> Team </a>
         </nav>
 
         <main>
